# gov-data

./: README.md  app.py  clients.py  commodities.ipynb  datasets.py  dockerfile  llm_pipeline.py  main.py  notebook.ipynb  package-lock.json  pyproject.toml  requirements.txt  tests.ipynb  utils.py
app/: datasets.py  main.py  utils.py
categories/: commodities.py  delinquency.py  demographics.py  housing.py  income_and_spending.py  inflation_and_prices.py  money_aggregates.py  output_and_growth.py  rates.py  wages_and_employment.py
deprecated/: functions.py
pages/: cost_living.py  housing.py  income.py  landing_page.py
static_datasets/: us_births_deaths.csv
