[project]
name = "gov-data"
version = "0.1.0"
description = "A unified, consistent, and developer-friendly API layer over the Federal Reserve Economic Data (FRED)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "fredapi>=0.5.2",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
